crates/toride-registry/tests/snapshots/snapshots__flathub__appstream_brave.snap
---
source: crates/toride-registry/tests/snapshots.rs
expression: "serde_json::to_string_pretty(value).expect(\"snapshot value serializes\")"
---
{
  "id": "com-brave-browser",
  "name": "Brave",
  "aliases": [],
  "summary": "Fast Internet, AI, Adblock",
  "description": "Brave is on a mission to fix the web by giving users a safer, faster and better browsing\nexperience while growing support for content creators through a new attention-based ecosystem\nof rewards.\nBrowse faster by blocking ads and trackers that violate your privacy and cost you time and\nmoney.",
  "homepage": "https://brave.com",
  "license": "MPL-2.0",
  "developer": "Brave Software",
  "binaries": [],
  "latest": {
    "value": "1.96.59",
    "original": null,
    "published_unix": 1790208000
  },
  "platforms": [
    {
      "os": "Linux",
      "arch": "X86_64",
      "min_release": null
    }
  ],
  "artifacts": [],
  "install": {
    "Flatpak": {
      "app_id": "com.brave.Browser",
      "remote": "flathub"
    }
  },
  "sources": [
    {
      "source": "Flathub",
      "id": "com.brave.Browser",
      "repo": null,
      "version": {
        "value": "1.96.59",
        "original": null,
        "published_unix": 1790208000
      },
      "provisional": false
    }
  ],
  "availability": "Available"
}
